--- a/index.html
+++ b/index.html
@@ -743,7 +743,7 @@
         z-index: 99;
         display: none;
         height: 255px;
-        width: 368dpx;
+        width: 100%;
         background: rgba(0, 0, 0, 0.6);
         position: relative;
         top: -190px;
@@ -1446,7 +1446,7 @@
         width: 520px;
         height: 470px;
         float: left;
-        margin-bottom: 20px;
+        margin-top: 15px;
         /* border: 1px solid black; */
     }
 
