--- a/index.html
+++ b/index.html
@@ -909,7 +909,7 @@
         background: white;
         float: left;
         margin-left: 1237px;
-        /* display: none; */
+        display: none;
         /* border:1px solid red; */
     }
 
