--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
         padding: 0;
     }
     body{
-        width: 1800px;
+        /* width: 1800px; */
         height: 1000px;
         /* border: 1px solid red; */
         background: rgb(236, 235, 235);
+        font-family:tahoma, 微软雅黑, sans-serif;
         /* background-image: linear-gradient(to top, #9EFBD3 0%, #45D4FB 48%, #57E9F2 100%); */
     }
     p{
@@ -127,7 +128,7 @@
 
 /* ------------------------头部内容------------------------------------------- */
     #big-img{
-        width: 102.8%;
+        width: 100%;
         /* margin-left:-50px; */
     }
     
@@ -259,7 +260,7 @@
         font-size: 13px;
         text-align: center;
         background: rgba(51, 51, 50,0.7);
-        border:1px solid rgba(255, 208, 0.7);
+        border:1px solid rgba(255, 208,0,0.7);
         line-height: 40px;
         position: relative;
         left:750px;
@@ -1580,11 +1581,17 @@
         display: block;
         position: relative;
     }
-
+    .yxlmall{
+        margin: 0 auto;
+        width: 1670px;
+        position: relative;
+        /* border: 1px solid red; */
+    }
     </style>
 </head>
 <body>
 
+<div class="yxlmall">
 <!-- 头部内容 -->
 <img src="img/000.jpg" id='big-img'>
 <div id='comm-topact' name='comm-topact'>
@@ -2808,6 +2815,7 @@
     <li><a href="#creative" target="_self"><img src='img/sidebar-3.jpg' style="margin-left: 22px;"/>FANART</a></li>
     <li><a href="#comm-topact" target="_self"><img src='img/sidebar-4.gif' style="margin-left: 19px;width: 33px;">顶部</a></li>
 </ul>
+</div>
 </body>
 </html>
 
